--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta name="title" content="index">
+<meta name="title" content="başlık">
 <title>başlık</title>
 </head>
 <body>
